syntax = "proto3";
package cliapi;

import "google/protobuf/empty.proto";

message SetPeerRequest {
  string id = 1;
  repeated uint32 ports = 2;
}

message RemovePeerRequest {
  string id = 1;
}

message PeerResponse {
  string id = 1;
  repeated string ports = 2;
  repeated string connected_ports = 3;
}

message PeerList {
  repeated PeerResponse peers = 1;
}


service Peer {
  rpc GetPeers(google.protobuf.Empty) returns (PeerList);
  rpc SetPeer(SetPeerRequest) returns (PeerResponse);
  rpc RemovePeer(RemovePeerRequest) returns (google.protobuf.Empty);
}